--- a/templates/room.html
+++ b/templates/room.html
@@ -199,7 +199,7 @@
                         <div class="output-box">
                             剩余时间：
                         </div>
-                        <div class="output-box" style="text-align: center" id = "time">
+                        <div class="output-box" style="text-align: center" id = "selftime">
                             60s
                         </div>
                 </div>
@@ -232,8 +232,8 @@
                     <div class="output-box">
                         剩余时间：
                     </div>
-                    <div class="output-box" style="text-align: center;" id="time">
-
+                    <div class="output-box" style="text-align: center;" id="enemytime">
+                        60s
                     </div>
                 </div>
                 <div id="enemy_info" style="height: 40%; width: 100%">
