--- a/templates/room.html
+++ b/templates/room.html
@@ -255,7 +255,7 @@
                 </div>
                 <div id="enemy_info" style="height: 40%; width: 100%">
                     <a href="/letgo/{{ roomid }}a{{ selfid }}"><button id="letgo" class="myButton" style="height: 25%;width: 100%">踢出房间</button></a>
-                    <button id="change_owner" class="myButton" style="height: 25%;width: 100%">房主转移</button>
+                    <a href="/hostchange/{{ roomid }}a{{ selfid }}"><button id="change_owner" class="myButton" style="height: 25%;width: 100%">房主转移</button></a>
                     <div class="output-box" style="font-size: 30px;">
                         当前房主：
                     </div>
