--- a/templates/room.html
+++ b/templates/room.html
@@ -127,6 +127,7 @@
 			var ifmyturn = {{ifmyturn}};
 			var ifowner = {{ifowner}};
 			var roomid = {{roomid}};
+            var boardinit = '{{boardinit}}';
 			blackchess = new Image();
 			blackchess.src = "../static/images/black.png";
 			whitechess = new Image();
